--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,20 +21,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Spotify Clone</title>
+    <title>MelonMix</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+      ╭─── Code by 𝓖𝓪𝓮𝓵𝓠𝓾𝓮𝓼𝓪𝓭𝓲𝓵𝓵𝓪 ───
     -->
   </body>
 </html>
